--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta http-equiv="refresh" content="1"> -->
-  <title>Sendly — Private File Sharing</title>
+  <title>Sendvia — Private File Sharing</title>
   <link rel="icon" href="logo.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -399,7 +399,7 @@
 <body>
   <div class="container">
     <div style="text-align: center;">
-      <h1>Sendly</h1>
+      <h1>Sendvia</h1>
       <p class="subtitle">Private file transfer between devices • No signup</p>
     </div>
 
@@ -924,4 +924,5 @@
     });
   </script>
 </body>
+
 </html>
