--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta http-equiv="refresh" content="1"> -->
   <title>Sendvia — Private File Sharing</title>
-  <link rel="icon" href="logo.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- LOGO -->
+    <!-- Light mode -->
+  <link rel="icon" href="logo-black.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: light)">
+    <!-- Dark mode -->
+  <link rel="icon" href="logo-white.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: dark)">
   <style>
     * {
       margin: 0;
@@ -235,7 +238,7 @@
       background: #ffebee;
       color: #c62828;
       border-radius: 10px;
-      border: 1.5px solid #388E3C;
+      border: 1.5px solid #c62828;
     }
 
     .progress-bar {
@@ -428,7 +431,16 @@
     <div class="or-divider" id="orDivider">OR</div>
 
     <div class="input-section" id="inputSection">
-      <input type="text" id="codeInput" class="code-input" placeholder="Enter 6-digit code" maxlength="6">
+      <input
+        type="text"
+        id="codeInput"
+        class="code-input"
+        placeholder="Enter 6-digit code"
+        maxlength="6"
+        inputmode="numeric"
+        pattern="[A-Z0-9]{6}"
+        autocomplete="one-time-code"
+      />
       <button class="btn" id="connectBtn">Download File</button>
     </div>
 
@@ -914,15 +926,23 @@
     });
 
     codeInput.addEventListener('input', (e) => {
-      e.target.value = e.target.value.toUpperCase();
+      const value = e.target.value
+        .toUpperCase()
+        .replace(/[^A-Z0-9]/g, '')
+        .slice(0, 6);
+
+      e.target.value = value;
+
+      if (value.length === 6) {
+        connectBtn.click();
+      }
     });
 
-    codeInput.addEventListener('keypress', (e) => {
-      if (e.key === 'Enter') {
+    codeInput.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' && codeInput.value.length === 6) {
         connectBtn.click();
       }
     });
   </script>
 </body>
-
 </html>
