--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         class="code-input"
         placeholder="Enter 6-digit code"
         maxlength="6"
-        inputmode="numeric"
+        inputmode="text"
         pattern="[A-Z0-9]{6}"
         autocomplete="one-time-code"
       />
@@ -946,3 +946,4 @@
   </script>
 </body>
 </html>
+
