--- a/index.html
+++ b/index.html
@@ -428,6 +428,11 @@
         type="text"
         id="codeInput"
         class="code-input"
+        inputmode="text"
+        autocomplete="off"
+        autocapitalize="characters"
+        autocorrect="off"
+        spellcheck="false"
         placeholder="6-character code"
         maxlength="6"
       />
@@ -847,4 +852,5 @@
   </script>
 </body>
 </html>
+
 
