--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
     </div>
 
     <div class="meta-footer">
-      <span id="versionText">Loading...</span>
+      <span id="versionText">Fetching Version...</span>
       <button id="changelogBtn" class="changelog-btn">CHANGELOG</button>
     </div>
 
@@ -795,7 +795,7 @@
         </button>
         </div>
         <div id="changelogBody" class="changelog-body">
-          Loading…
+          Fetching CHANGELOG
         </div>
       </div>
     </div>
@@ -1392,4 +1392,5 @@
   </script>
 </body>
 </html>
+
 
