--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
               <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
             </svg>
-            Share Code
+            Share Link
           </button>
           <button class="share-btn" id="copyLinkBtn">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -115,7 +115,7 @@
     <div id="helpModal" class="changelog-modal">
       <div class="changelog-content">
         <div class="changelog-header">
-          <span>Help</span>
+          <h2>Help Section</h2>
           <button id="helpClose" aria-label="Close help">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <line x1="18" y1="6" x2="6" y2="18"></line>
@@ -124,15 +124,56 @@
           </button>
         </div>
         <div class="changelog-body">
-          <h2>How to Use Sendvia</h2>
-          <ol>
-            <li>Drag and drop your file into the drop zone.</li>
-            <li>Copy the generated code or scan the QR code.</li>
-            <li>Share it with the receiver.</li>
-            <li>Receiver enters the code or scans QR to download.</li>
-          </ol>
-          <img src="https://via.placeholder.com/400x200.png?text=Example+Screenshot" alt="Example screenshot" style="width:100%; border-radius:8px;">
-          <p>If you encounter issues, contact support at <a href="mailto:support@sendvia.com">support@sendvia.com</a>.</p>
+          <div class="changelog-body">
+            <!-- <h2>Help Section</h2> -->
+            <div class="help-grid">
+              <div class="help-item">
+                <img src="images/Description1.png" alt="Description 1">
+                <h3>1. Start a transfer</h3>
+                <p>Click “Drop a file to share” and select the file you want to send.</p>
+              </div>
+              <div class="help-item">
+                <img src="images/Description2.png" alt="Description 2">
+                <h3>2. Select your file</h3>
+                <p>Choose any file from your device to begin the upload.</p>
+              </div>
+              <div class="help-item">
+                <img src="images/Description3.png" alt="Description 3">
+                <h3>3. Upload to the website</h3>
+                <p>Wait while the file is securely prepared for sharing.</p>
+              </div>
+              <div class="help-item">
+                <img src="images/Description4.png" alt="Description 4">
+                <h3>4. Copy the generated code</h3>
+                <p>Once the upload is complete, copy the unique transfer code</p>
+              </div>
+              <div class="help-item">
+                <img src="images/Description5.png" alt="Description 5">
+                <h3>5. Use the QR option (optional)</h3>
+                <p>Click “Show QR” to display a scannable QR code instead of the code.</p>
+              </div>
+              <div class="help-item">
+                <img src="images/Description6.png" alt="Description 6">
+                <h3>6. Share with the recipient</h3>
+                <p>Send the transfer link to the person you want to share the file with.</p>
+              </div>
+              <div class="help-item">
+                <img src="images/Description7.png" alt="Description 7">
+                <h3>7. Or copy the link</h3>
+                <p>You can also manually copy and share the link.</p>
+              </div>
+              <div class="help-item">
+                <img src="images/Description8.png" alt="Description 8">
+                <h3>8. Enter the transfer code</h3>
+                <p>Paste the received code on the website to access the file.</p>
+              </div>
+              <div class="help-item">
+                <img src="images/Description9.png" alt="Description 9">
+                <h3>9. Download the file</h3>
+                <p>Click “Download File” to receive the shared file</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
