--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <link rel="icon" href="logo-black.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: light)">
   <link rel="icon" href="logo-white.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: dark)">
+  <script>
+    if (window.location.search || window.location.hash) {
+      window.history.replaceState({}, document.title, window.location.pathname);
+    }
+  </script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -107,14 +112,14 @@
     </div>
 
     <div class="meta-footer">
-      <span id="versionText">Loading...</span>
+      <span id="versionText">Fetching...</span>
       <button id="changelogBtn" class="changelog-btn">CHANGELOG</button>
-      <button id="helpBtn" class="changelog-btn">HELP</button>
+      <button id="helpBtn" class="help-btn">HELP</button>
     </div>
     
-    <div id="helpModal" class="changelog-modal">
-      <div class="changelog-content">
-        <div class="changelog-header">
+    <div id="helpModal" class="help-modal">
+      <div class="help-content">
+        <div class="help-header">
           <h2>Help Section</h2>
           <button id="helpClose" aria-label="Close help">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -123,55 +128,52 @@
             </svg>
           </button>
         </div>
-        <div class="changelog-body">
-          <div class="changelog-body">
-            <!-- <h2>Help Section</h2> -->
-            <div class="help-grid">
-              <div class="help-item">
-                <img src="images/Description1.png" alt="Description 1">
-                <h3>1. Start a transfer</h3>
-                <p>Click “Drop a file to share” and select the file you want to send.</p>
-              </div>
-              <div class="help-item">
-                <img src="images/Description2.png" alt="Description 2">
-                <h3>2. Select your file</h3>
-                <p>Choose any file from your device to begin the upload.</p>
-              </div>
-              <div class="help-item">
-                <img src="images/Description3.png" alt="Description 3">
-                <h3>3. Upload to the website</h3>
-                <p>Wait while the file is securely prepared for sharing.</p>
-              </div>
-              <div class="help-item">
-                <img src="images/Description4.png" alt="Description 4">
-                <h3>4. Copy the generated code</h3>
-                <p>Once the upload is complete, copy the unique transfer code</p>
-              </div>
-              <div class="help-item">
-                <img src="images/Description5.png" alt="Description 5">
-                <h3>5. Use the QR option (optional)</h3>
-                <p>Click “Show QR” to display a scannable QR code instead of the code.</p>
-              </div>
-              <div class="help-item">
-                <img src="images/Description6.png" alt="Description 6">
-                <h3>6. Share with the recipient</h3>
-                <p>Send the transfer link to the person you want to share the file with.</p>
-              </div>
-              <div class="help-item">
-                <img src="images/Description7.png" alt="Description 7">
-                <h3>7. Or copy the link</h3>
-                <p>You can also manually copy and share the link.</p>
-              </div>
-              <div class="help-item">
-                <img src="images/Description8.png" alt="Description 8">
-                <h3>8. Enter the transfer code</h3>
-                <p>Paste the received code on the website to access the file.</p>
-              </div>
-              <div class="help-item">
-                <img src="images/Description9.png" alt="Description 9">
-                <h3>9. Download the file</h3>
-                <p>Click “Download File” to receive the shared file</p>
-              </div>
+        <div class="help-body">
+          <div class="help-grid">
+            <div class="help-item">
+              <h3>1. Start a transfer</h3>
+              <p>Click “Drop a file to share” and select the file you want to send.</p>
+              <img src="images/Description1.png" alt="Drop a file to start transfer">
+            </div>
+            <div class="help-item">
+              <h3>2. Select your file</h3>
+              <p>Choose any file from your device to begin the upload.</p>
+              <img src="images/Description2.png" alt="Select file from device">
+            </div>
+            <div class="help-item">
+              <h3>3. Upload to the website</h3>
+              <p>Wait while the file is securely prepared for sharing.</p>
+              <img src="images/Description3.png" alt="Uploading file">
+            </div>
+            <div class="help-item">
+              <h3>4. Copy the generated code</h3>
+              <p>Once the upload is complete, copy the unique transfer code.</p>
+              <img src="images/Description4.png" alt="Copy transfer code">
+            </div>
+            <div class="help-item">
+              <h3>5. Use the QR option (optional)</h3>
+              <p>Click “Show QR” to display a scannable QR code instead.</p>
+              <img src="images/Description5.png" alt="QR code option">
+            </div>
+            <div class="help-item">
+              <h3>6. Share with the recipient</h3>
+              <p>Send the code or link to the person you want to share the file with.</p>
+              <img src="images/Description6.png" alt="Share link or code">
+            </div>
+            <div class="help-item">
+              <h3>7. Or copy the link</h3>
+              <p>You can also manually copy and share the link.</p>
+              <img src="images/Description7.png" alt="Copy link">
+            </div>
+            <div class="help-item">
+              <h3>8. Enter the transfer code</h3>
+              <p>Paste the received code on the website to access the file.</p>
+              <img src="images/Description8.png" alt="Enter transfer code">
+            </div>
+            <div class="help-item">
+              <h3>9. Download the file</h3>
+              <p>Click “Download File” to receive the shared file.</p>
+              <img src="images/Description9.png" alt="Download file">
             </div>
           </div>
         </div>
