--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <div id="helpModal" class="help-modal">
       <div class="help-content">
         <div class="help-header">
-          <h2>Help Section</h2>
+          <span>Help Section</span>
           <button id="helpClose" aria-label="Close help">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <line x1="18" y1="6" x2="6" y2="18"></line>
