--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <link rel="icon" href="logo-black.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: light)">
   <link rel="icon" href="logo-white.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: dark)">
-  <script>
-    if (window.location.search || window.location.hash) {
-      window.history.replaceState({}, document.title, window.location.pathname);
-    }
-  </script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -213,7 +208,7 @@
     <div id="helpModal" class="help-modal">
       <div class="help-content">
         <div class="help-header">
-          <h2>Help Section</h2>
+          <span>Help Section</span>
           <button id="helpClose" aria-label="Close help">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <line x1="18" y1="6" x2="6" y2="18"></line>
