--- a/privacy-terms/index.html
+++ b/privacy-terms/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="logo-black.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: light)">
   <link rel="icon" href="logo-white.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: dark)">
-  <link rel="stylesheet" href="privacy-style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
