feat: add page loading animation for slow connections
- Create triple-ring spinner with Sendvia branding
- Add smooth fade-in/out transitions
- Include 5-second fallback for slow networks
- Optimize for mobile devices

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="pageLoader" class="page-loader">
+    <div class="loader-content">
+      <div class="loader-logo">Sendvia</div>
+      <div class="loader-spinner">
+        <div class="spinner-ring"></div>
+        <div class="spinner-ring"></div>
+        <div class="spinner-ring"></div>
+      </div>
+      <div class="loader-text">Loading...</div>
+    </div>
+  </div>
   <div class="container">
     <div style="text-align: center;">
       <h1>Sendvia</h1>
