feat(noscript): add glass-style, mobile-friendly noscript overlay with animation

--- a/index.html
+++ b/index.html
@@ -3,13 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sendvia — Private File Sharing</title>
+  <title>Sendvia - Fast & Private Browser File Transfer</title>
+  <meta name="description" content="Sendvia: fast, secure browser-based file transfer with no tracking. Send files directly from your browser, no signup, no ads.">
+  <meta property="og:title" content="Sendvia - Fast & Private File Transfer">
+  <meta property="og:description" content="Sendvia lets you send files directly from your browser with zero tracking. Safe, private, and easy to use.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://sendvia.github.io/">
+  <meta property="og:image" content="https://sendvia.github.io/logo-white.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Sendvia - Fast & Private File Transfer">
+  <meta name="twitter:description" content="Sendvia lets you send files directly from your browser with zero tracking. Safe, private, and easy to use.">
+  <meta name="twitter:image" content="https://sendvia.github.io/logo-white.png">
+  <meta name="twitter:site" content="@Sendvia">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="theme-color" content="#1e1e1e">
+  <meta name="robots" content="index, follow">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <link rel="icon" href="logo-black.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: light)">
   <link rel="icon" href="logo-white.png" type="image/png" sizes="64x64" media="(prefers-color-scheme: dark)">
+  <noscript>
+  <noscript>
+    <div class="noscript-container">
+      <div class="noscript-box">
+        <h1>Sendvia Requires JavaScript</h1>
+        <p>It looks like JavaScript is disabled in your browser.</p>
+        <p>Sendvia relies on JavaScript to function, so please enable it to transfer files safely and securely.</p>
+        <a href="https://www.enable-javascript.com/" target="_blank" rel="noopener noreferrer">
+          Learn how to enable JavaScript
+        </a>
+      </div>
+    </div>
+  </noscript>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
